2005-04-12  Mike Sperber  <mike@xemacs.org>

	* minibuf.el (get-user-response): Move here from dialog.el so it
	works even when dialogs are not available.
	* dialog.el: See above.

2005-04-01  Marcus Crestani  <crestani@xemacs.org>

	The new allocator.

	MEMORY_USAGE_STATS

	* diagnose.el: Add new lisp function to pretty print statistics
	about the new allocator.
	* diagnose.el (show-mc-alloc-memory-usage): New.

2005-04-08  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (find-file): Honour the coding system argument even in
	the case where we're creating a new file. 

2005-04-04  Steve Youngs  <steve@sxemacs.org>

	* files.el (backup-buffer): Write "%backup%~" in
	`auto-save-directory' and fall back to $HOME if for some reason
	that isn't possible.
	Suggested By: Jamie Zawinski <jwz@jwz.org>

2005-03-31  Aidan Kehoe  <kehoea@parhasard.net>

	* faces.el (face-complain-about-font):
	* x-faces.el:
	The warnings when there wasn't a bold or italic version of a given
	font available still specified "Emacs" as the X11 resource
	class. Change this to "XEmacs."
	
2005-03-29  Aidan Kehoe  <kehoea@parhasard.net>

	* startup.el (command-line): Move Mule initialisation before
	window-system initialisation, because the latter depends on
	Unicode support with X11 and Unicode keysyms. 

2005-03-28  Aidan Kehoe  <kehoea@parhasard.net>

	* register.el (insert-register): Revert part of Ben's incomplete
	sync of 2005-01-26--we don't have insert-for-yank. 

2005-03-25  Ralf Angeli  <angeli@iwi.uni-sb.de> 

	* easymenu.el (easy-menu-remove): As described in 
	E1D4Nn5-0001lq-EU@neutrino.iwi.uni-sb.de; don't strip everything
	except the "Command" menu from mode-popup-menu. 

2005-03-25  Ralf Angeli  <angeli@iwi.uni-sb.de> 
 
        * font.el (font-spatial-to-canonical): Correct calculation of 
        return value for pixel-based input value. 
 
2005-03-17  Mike Sperber  <mike@xemacs.org>

	* files.el: Merge the following changes from GNU Emacs:
